--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/cache@v4
       with:
         path: ~/.m2
-        key: maven-java-${{ JAVA_VERSION }}-${{ hashFiles('**/pom.xml') }}
+        key: maven-java-${{ env.JAVA_VERSION }}-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           maven-pip-
     - name: Run unit tests
